--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.6.2",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
