--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.4.1",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "react-dom": "^16.10.1",
+    "react-quill": "^1.3.3"
   },
   "meteor": {
     "mainModule": {
