--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.12.5",
     "bcrypt": "^3.0.8",
     "bootstrap": "^4.5.3",
+    "html-react-parser": "^0.14.1",
     "jquery": "^3.5.1",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.14.0",
