--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "turndown": "^7.0.0"
   },
   "meteor": {
     "mainModule": {
